--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swagger-ui-express": "^4.1.6"
   },
   "engines": {
-    "node": "v10.23.0"
+    "node": "v10.23.0",
+    "npm": "6.14.8"
   }
 }
